--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">WanAndroidMvp</string>
+
+    <string name="text_unknown_error">未知错误</string>
+    <string name="text_network_not_available">网络未连接</string>
+    <string name="text_address_not_reachable">无法连接到该地址</string>
+    <string name="text_network_timeout">服务器连接超时</string>
+    <string name="text_token_expired">登录过期，请重新登录！</string>
+    <string name="json_parse_error">json解析异常</string>
 </resources>
